--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -140,10 +140,10 @@ Week 2 & \begin{minipage}{.85\textwidth}
 Week 3 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 9/12 and 9/14 - Human Perception and Uncertainty
+	\item 9/12 and 9/14 - Non-traditional Data Sources
 	
 	\item Reading (read before 9/12): "One Vast Index": Google Book Search 
-	\item Reading (read before 9/14): Same Stats, Different Graphs 
+	\item Reading (read before 9/14): Content Analysis in an Era of Big Data
 	
 	\item Project 1 due midnight, Friday 9/15
 	
@@ -174,7 +174,7 @@ Week 5 & \begin{minipage}{.85\textwidth}
 	\item 9/26 and 9/28 - Picking the Right Data 
 	
 	\item Reading (read before 9/26): The parable of Google Flu
-	\item Reading (read before 9/28): 
+	\item Reading (read before 9/28): Salmon and Red Herrings
 	
 	\item Project 2 due midnight, Friday Sept 29.
 	
@@ -190,8 +190,8 @@ Week 6 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 10/3 and 10/5 - Picking the Right Models
 
-	\item Reading (read before 10/3):
-	\item Reading (read before 10/5):
+	\item Reading (read before 10/3): An Introduction to Model Selection
+	\item Reading (read before 10/5): Model Selection: An Integral Part of Inference
 	
 	\item Reading Assignment 2 due by Midnight Friday, October 6.
 	
@@ -203,10 +203,10 @@ Week 6 & \begin{minipage}{.85\textwidth}
 Week 7 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 10/10 and 10/12 - Quantifying Uncertainty
+	\item 10/10 and 10/12 - Distributional Assumptions
 
-	\item Reading (Read before 10/10):
-	\item Reading (Read before 10/12):
+	\item Reading (Read before 10/10): Same Stats, Different Graphs 
+	\item Reading (Read before 10/12): The Insignificance of Statistical Significane Testing
 	
 	\item Project 3 due by midnight, Friday October 13.
 	
@@ -242,10 +242,10 @@ Week 8 & \begin{minipage}{.85\textwidth}
 Week 9 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 10/24 and 10/26 - Distributional Assumptions and Randomization in Decision Making
+	\item 10/24 and 10/26 - Quantifying Uncertainty
 	
-	\item Reading (Read before 10/24):
-	\item Reading (Read before 10/26):
+	\item Reading (Read before 10/24): 
+	\item Reading (Read before 10/26): 
 	
 	\item Reading Assignment 3 due by Midnight Friday, October 27th
 	
@@ -257,12 +257,15 @@ Week 9 & \begin{minipage}{.85\textwidth}
 Week 10 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
+	\item 10/31 and 11/2 - Human Perception and Data Manipulation
 	
-	\item 10/31 and 11/2 - Masking the Truth and Data Manipulation
+	\item Reading (Read before 10/31): Belief in the Law of Small Numbers
+	\item Reading (Read before 11/2): The Monty Hall Problem
+	
 	
 	\item Project 4 due by Midnight Friday, November 3rd.
-		
 	\item Project 5 assigned, due midnight Friday 12/1 - Solution Set Optimization with Decisionmaker Input
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -273,7 +276,7 @@ Week 11 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 11/7 and 11/9 - Human Perception in Decision and Policymaking	
 
-	\item Reading (Read before 11/7):
+	\item Reading (Read before 11/7): Known Knowns, Known Unknowns, Unknown Unkowns: The Predicament of Evidence-Based Policy
 	\item Reading (Read before 11/9):
 	
 	\item Reading Assignment 4 due by Midnight Friday, November 10th.	
