--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -244,10 +244,10 @@ Week 9 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 10/24 and 10/26 - Quantifying Uncertainty
 	
-	\item Reading (Read before 10/24): 
-	\item Reading (Read before 10/26): 
+	\item Reading (Read before 10/24): Survey of Sampling-Based Methods for Uncertainty and Sensitivity Analysis pg 1-12.
+	\item Reading (Read before 10/26): Survey of Sampling-Based Methods for Uncertainty and Sensitivity Analysis pg 1-12.
 	
-	\item Reading Assignment 3 due by Midnight Friday, October 27th
+	\item Reading Assignment 3 due by Midnight Friday, October 27th: Survey of Sampling-Based Methods for Uncertainty and Sensitivity Analysis pg 13 - 24.
 	
 	\vspace{1mm}
 \end{itemize}
@@ -260,7 +260,7 @@ Week 10 & \begin{minipage}{.85\textwidth}
 	\item 10/31 and 11/2 - Human Perception and Data Manipulation
 	
 	\item Reading (Read before 10/31): Belief in the Law of Small Numbers
-	\item Reading (Read before 11/2): The Monty Hall Problem
+	\item Reading (Read before 11/2): Visual Quality Metrics and Human Perception
 	
 	
 	\item Project 4 due by Midnight Friday, November 3rd.
@@ -277,7 +277,7 @@ Week 11 & \begin{minipage}{.85\textwidth}
 	\item 11/7 and 11/9 - Human Perception in Decision and Policymaking	
 
 	\item Reading (Read before 11/7): Known Knowns, Known Unknowns, Unknown Unkowns: The Predicament of Evidence-Based Policy
-	\item Reading (Read before 11/9):
+	\item Reading (Read before 11/9):The Monty Hall Problem
 	
 	\item Reading Assignment 4 due by Midnight Friday, November 10th.	
 	
