--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -291,8 +291,8 @@ Week 12 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 11/14 and 11/16 - Nonparametric Modeling in Decision Making
 	
-	\item Reading (Read before 11/14):
-	\item Reading (Read before 11/16):
+	\item Reading (Read before 11/14): Of Prediction and Policy
+	\item Reading (Read before 11/16): Dealing with Nonnormal Data
 	
 	\item Reading Assignment 5 due by Midnight Friday, November 17th.	
 	
@@ -315,8 +315,8 @@ Week 14 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 11/27 and 11/30 - Communicating with Data
 
-	\item Reading (Read before 11/27):
-	\item Reading (Read before 11/30):
+	\item Reading (Read before 11/27):Distilling Meaning from Data
+	\item Reading (Read before 11/30): Social Influence of Big Data (a 61-million person experiment)
 	
 	\item Project 5 due on Friday, December 1st by midnight.	
 	
@@ -329,9 +329,6 @@ Week 15 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 12/5 and 12/7 - Trust, Data, Decisions and Society
-	
-	\item Reading (Read before 12/5):
-	\item Reading (Read before 12/7):
 	
 	\item No reading assignment due this week.
 	
