--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -66,7 +66,7 @@ You must bring a laptop to class  each day unless otherwise noted during lecture
 \textbf {\large Grade Distribution:} \\
 \hspace*{40mm}
 \begin{tabular}{ l l }
-Weekly Reading Assignments & 10\% \\
+Reading Assignments & 10\% \\
 Projects & 60\% \\
 Final Report & 30\%\\
 \end{tabular} \\\\
@@ -122,7 +122,6 @@ Week 1 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 8/31 - Introduction
-		\item Project 1 assigned, due midnight Fri Sept 15 - Retrieving Data from Non-traditional Sources
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -140,14 +139,12 @@ Week 2 & \begin{minipage}{.85\textwidth}
 Week 3 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 9/12 and 9/14 - Non-traditional Data Sources
+	\item 9/12 and 9/14 - Asking the Right Questions
 	
-	\item Reading (read before 9/12): "One Vast Index": Google Book Search 
-	\item Reading (read before 9/14): Content Analysis in an Era of Big Data
+	\item Reading (read before 9/12): Critical Questions for Big Data
+	\item Reading (read before 9/14): Algorithmic Accountability
 	
-	\item Project 1 due midnight, Friday 9/15
-	
-	\item Project 2 assigned, due midnight Fri Sept 29 - Defining and Simulating Uncertainty. 
+	\item Project 1 assigned, due midnight Fri Sept 22 - Defining and Simulating Uncertainty. 
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -156,13 +153,12 @@ Week 3 & \begin{minipage}{.85\textwidth}
 Week 4 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 9/18 and 9/21 - Asking the Right Questions
+	\item 9/18 and 9/21 - Non-traditional Data Sources
 	
-	\item Reading (read before 9/18): Critical Questions for Big Data
-	\item Reading (read before 9/12): Algorithmic Accountability
-	
-	\item Reading Assignment 1 due by Midnight, Friday 9/22
-	
+	\item Reading (read before 9/18): "One Vast Index": Google Book Search 
+	\item Reading (read before 9/21): Content Analysis in an Era of Big Data
+		
+	\item Project 2 assigned, due midnight Fri Sept 29 -  Retrieving Data from Non-traditional Sources
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -193,7 +189,7 @@ Week 6 & \begin{minipage}{.85\textwidth}
 	\item Reading (read before 10/3): An Introduction to Model Selection
 	\item Reading (read before 10/5): Model Selection: An Integral Part of Inference
 	
-	\item Reading Assignment 2 due by Midnight Friday, October 6.
+	\item Reading Assignment 1 due by Midnight Friday, October 6.
 	
 	\vspace{1mm}
 \end{itemize}
@@ -245,9 +241,9 @@ Week 9 & \begin{minipage}{.85\textwidth}
 	\item 10/24 and 10/26 - Quantifying Uncertainty
 	
 	\item Reading (Read before 10/24): Survey of Sampling-Based Methods for Uncertainty and Sensitivity Analysis pg 1-12.
-	\item Reading (Read before 10/26): Survey of Sampling-Based Methods for Uncertainty and Sensitivity Analysis pg 1-12.
+	\item Reading (Read before 10/26): Survey of Sampling-Based Methods for Uncertainty and Sensitivity Analysis pg 13 - 24.
 	
-	\item Reading Assignment 3 due by Midnight Friday, October 27th: Survey of Sampling-Based Methods for Uncertainty and Sensitivity Analysis pg 13 - 24.
+	\item Reading Assignment 2 due by Midnight Friday, October 27th
 	
 	\vspace{1mm}
 \end{itemize}
@@ -279,7 +275,7 @@ Week 11 & \begin{minipage}{.85\textwidth}
 	\item Reading (Read before 11/7): Known Knowns, Known Unknowns, Unknown Unkowns: The Predicament of Evidence-Based Policy
 	\item Reading (Read before 11/9):The Monty Hall Problem
 	
-	\item Reading Assignment 4 due by Midnight Friday, November 10th.	
+	\item Reading Assignment 3 due by Midnight Friday, November 10th.	
 	
 	\vspace{1mm}
 \end{itemize}
@@ -294,7 +290,7 @@ Week 12 & \begin{minipage}{.85\textwidth}
 	\item Reading (Read before 11/14): Of Prediction and Policy
 	\item Reading (Read before 11/16): Dealing with Nonnormal Data
 	
-	\item Reading Assignment 5 due by Midnight Friday, November 17th.	
+	\item Reading Assignment 4 due by Midnight Friday, November 17th.	
 	
 	\vspace{1mm}
 \end{itemize}
