--- a/Assignments/Project_1/project_1_assignment.tex
+++ b/Assignments/Project_1/project_1_assignment.tex
@@ -38,6 +38,7 @@ Included with this lab is a Jupyter notebook which provides a simple example of 
 \section{Stretch Goals}
 These goals are optional, and worth a very small amount (up to 5\% total of your assignment grade for all goals in total) of extra credit.  Completing any one stretch goal gives you the opportunity to receive all 5 points of extra credit.
 (1) Acquire and process a satellite dataset on your own, rather than using the online tool.  This is very difficult, and only recommended for students with experience with GIS or Remote Sensing.\\
-(2) Add an additional covariate to enhance your targeting analysis, and both (a) defend it theoretically, and (b) provide a justification for how you include uncertainty into the new variable in your simulation approach.
+(2) Add an additional covariate to enhance your targeting analysis, and both (a) defend it theoretically, and (b) provide a justification for how you include uncertainty into the new variable in your simulation approach.\\
+(3)Conduct your analysis at multiple geographic scales and contrast your results.
 
 \end{document}
