Asking the Right Questions Project

--- a/Assignments/Project_1/project_1_assignment.tex
+++ b/Assignments/Project_1/project_1_assignment.tex
@@ -36,7 +36,7 @@ Once on the site, you will select a country of interest, the geographic scale yo
 Included with this lab is a Jupyter notebook which provides a simple example of simulating uncertainty in a dataset similar to the one you will produce. One of the biggest challenges in simulation is choosing appropriate distributions to model uncertainty with - for example, one might assume that estimates of international aid may be incorrect only in one direction (only omitting aid), or both directions (both omitting aid and having duplicate aid in records).  Further, likelihoods of uncertainty might vary (it's likely aid is underestimated by 10\%, but very unlikely it's underestimated by 40,000\%).  The distributions you choose will define your assumptions surrounding uncertainty.
 
 \section{Stretch Goals}
-These goals are optional, and worth a very small amount (up to 5\% total of your assignment grade for all goals in total) of extra credit.  Completing any one stretch goal gives you the opportunity to receive all 5 points of extra credit.
+These goals are optional, and worth a very small amount (up to 5\% total of your assignment grade for all goals in total) of extra credit.  Completing any one stretch goal gives you the opportunity to receive all 5 points of extra credit.\\
 (1) Acquire and process a satellite dataset on your own, rather than using the online tool.  This is very difficult, and only recommended for students with experience with GIS or Remote Sensing.\\
 (2) Add an additional covariate to enhance your targeting analysis, and both (a) defend it theoretically, and (b) provide a justification for how you include uncertainty into the new variable in your simulation approach.\\
 (3)Conduct your analysis at multiple geographic scales and contrast your results.
