--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -158,7 +158,7 @@ Week 4 & \begin{minipage}{.85\textwidth}
 	\item Reading (read before 9/18): "One Vast Index": Google Book Search 
 	\item Reading (read before 9/21): Content Analysis in an Era of Big Data
 		
-	\item Project 2 assigned, due midnight Fri Sept 29 -  Retrieving Data from Non-traditional Sources
+	\item Project 2 assigned, due midnight Fri Oct 6 -  Retrieving Data from Non-traditional Sources
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -172,9 +172,9 @@ Week 5 & \begin{minipage}{.85\textwidth}
 	\item Reading (read before 9/26): The parable of Google Flu
 	\item Reading (read before 9/28): Salmon and Red Herrings
 	
-	\item Project 2 due midnight, Friday Sept 29.
-	
-	\item Project 3 assigned, due midnight Friday October 13th - Integrating Disparate Data Sources
+
+	\item Reading Assignment 1 due by Midnight Friday, September 29th.
+
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -189,7 +189,8 @@ Week 6 & \begin{minipage}{.85\textwidth}
 	\item Reading (read before 10/3): An Introduction to Model Selection
 	\item Reading (read before 10/5): Model Selection: An Integral Part of Inference
 	
-	\item Reading Assignment 1 due by Midnight Friday, October 6.
+	\item Project 2 due midnight, Friday October 6th.
+	
 	
 	\vspace{1mm}
 \end{itemize}
@@ -204,7 +205,8 @@ Week 7 & \begin{minipage}{.85\textwidth}
 	\item Reading (Read before 10/10): Same Stats, Different Graphs 
 	\item Reading (Read before 10/12): The Insignificance of Statistical Significane Testing
 	
-	\item Project 3 due by midnight, Friday October 13.
+		\item Project 3 assigned, due midnight Monday October 23th - Integrating Disparate Data Sources
+	
 	
 	\vspace{1mm}
 \end{itemize}
@@ -217,6 +219,7 @@ Week 8 & \begin{minipage}{.85\textwidth}
 	\item 10/17 - No Class (Fall Break)
 	\item 10/19 - Data Visualization (No Reading)
 	
+	\item Project 3 due by midnight, Monday October 23.
 	\item Project 4 assigned, due midnight Friday 11/3 - Simulating a Solution
 	\vspace{1mm}
 \end{itemize}
