Corrected reading assignment dates and numbers

--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -206,7 +206,7 @@ Week 7 & \begin{minipage}{.85\textwidth}
 	\item Reading (Read before 10/12): The Insignificance of Statistical Significane Testing
 	
 		\item Project 3 assigned, due midnight Monday October 23th - Integrating Disparate Data Sources
-	
+		\item Reading Assignment 2 due midnight, October 13th.
 	
 	\vspace{1mm}
 \end{itemize}
@@ -246,7 +246,7 @@ Week 9 & \begin{minipage}{.85\textwidth}
 	\item Reading (Read before 10/24): Survey of Sampling-Based Methods for Uncertainty and Sensitivity Analysis pg 1-12.
 	\item Reading (Read before 10/26): Survey of Sampling-Based Methods for Uncertainty and Sensitivity Analysis pg 13 - 24.
 	
-	\item Reading Assignment 2 due by Midnight Friday, October 27th
+	\item Reading Assignment 3 due by Midnight Friday, October 27th
 	
 	\vspace{1mm}
 \end{itemize}
@@ -278,7 +278,7 @@ Week 11 & \begin{minipage}{.85\textwidth}
 	\item Reading (Read before 11/7): Known Knowns, Known Unknowns, Unknown Unkowns: The Predicament of Evidence-Based Policy
 	\item Reading (Read before 11/9):The Monty Hall Problem
 	
-	\item Reading Assignment 3 due by Midnight Friday, November 10th.	
+	\item Reading Assignment 4 due by Midnight Friday, November 10th.	
 	
 	\vspace{1mm}
 \end{itemize}
@@ -293,7 +293,7 @@ Week 12 & \begin{minipage}{.85\textwidth}
 	\item Reading (Read before 11/14): Of Prediction and Policy
 	\item Reading (Read before 11/16): Dealing with Nonnormal Data
 	
-	\item Reading Assignment 4 due by Midnight Friday, November 17th.	
+	\item Reading Assignment 5 due by Midnight Friday, November 17th.	
 	
 	\vspace{1mm}
 \end{itemize}
